feat: integrate AWS S3 for image storing
